--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <div style="text-align: center;">
-    <img style="width: 100%;" src="./Frame_km.png" alt=""/>
+    <img style="width: 100%;" src="https://mg.emoney.com.kh:8686/mg/vnbank/terms_km.png" alt=""/>
 </div>
